--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,7 @@ p {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../src/assets/img/fond.jpg") top right no-repeat;
+  background: url("./assets/img/fond.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
