--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,11 @@ p {
   background: black;
 }
 
+#preloader.preloader-fade {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
 #preloader:before {
   content: "";
   position: fixed;
