--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@ p {
   color: #ffffff;
 }
 
+.link-styled {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
 /*---#Back to top button---*/
 
 .back-to-top {
@@ -72,12 +77,7 @@ p {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: black;
-}
-
-#preloader.preloader-fade {
-  opacity: 0;
-  transition: opacity 0.5s ease-out;
+  background: #000000;
 }
 
 #preloader:before {
@@ -85,9 +85,9 @@ p {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid black;
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
+  border: 6px solid #000000;
+  border-top-color: #fff;
+  border-bottom-color: #fff;
   border-radius: 50%;
   width: 60px;
   height: 60px;
