--- a/src/App.css
+++ b/src/App.css
@@ -1182,6 +1182,18 @@ section {
   background: #0678e3;
 }
 
+.contact .formTittle {
+  color: #ffffff;
+  display: block;
+  font-size: 0.8rem;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
+  line-height: 1.5;
+  margin: 0 0 1rem 0;
+  text-transform: uppercase;
+  float: left;
+}
+
 @keyframes animate-loading {
   0% {
     transform: rotate(0deg);
